SDKs/twilio.com/twilio_wireless_v1/1.37.4/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()
    
    req := operations.CreateCommandRequest{
        Security: operations.CreateCommandSecurity{
            AccountSidAuthToken: shared.SchemeAccountSidAuthToken{
                Password: "YOUR_PASSWORD_HERE",
                Username: "YOUR_USERNAME_HERE",
            },
        },
        Request: &operations.CreateCommandCreateCommandRequest{
            CallbackMethod: "PATCH",
            CallbackURL: "non",
            Command: "molestias",
            CommandMode: "binary",
            DeliveryReceiptRequested: true,
            IncludeSid: "quia",
            Sim: "dolore",
        },
    }
    
    res, err := s.CreateCommand(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.WirelessV1Command != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `CreateCommand` - Send a Command to a Sim.
* `CreateRatePlan`
* `DeleteCommand` - Delete a Command instance from your account.
* `DeleteRatePlan`
* `DeleteSim` - Delete a Sim resource on your Account.
* `FetchCommand` - Fetch a Command instance from your account.
* `FetchRatePlan`
* `FetchSim` - Fetch a Sim resource on your Account.
* `ListAccountUsageRecord`
* `ListCommand` - Retrieve a list of Commands from your account.
* `ListDataSession`
* `ListRatePlan`
* `ListSim` - Retrieve a list of Sim resources on your Account.
* `ListUsageRecord`
* `UpdateRatePlan`
* `UpdateSim` - Updates the given properties of a Sim resource on your Account.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
